# lmnop-eavesdrop

./: .copier-answers.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODE_STYLE.md  Dockerfile  ISSUES.md  README.md  Taskfile.yaml  config.sample.yaml  manifest  pyproject.toml
.github/workflows/: ci.yml  tests.yml
.llm/: CLAUDE.md
.llm/specs/001-refactor-the-client/: data-model.md  research.md
.llm/specs/001-refactor-the-client/contracts/: eavesdrop_client_api.py
.llm/specs/002-active-listener-client/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
.llm/specs/002-active-listener-client/contracts/: cli_interface.md  text_processing.md  ydotool_integration.md
.omp/: lsp.json
.specify/templates/: agent-file-template.md  plan-template.md  spec-template.md  tasks-template.md
assets/: gnome-overlay.pen
docker/: Dockerfile  Dockerfile.cuda-base  Dockerfile.rocm-base  entrypoint.sh
docs/: 00-professionalize-codebase.md  01-rtsp-stream-transcription-design.md  02-rxpy-reactive-audio-pipeline.md  03-comprehensive-typing-analysis.md  03-rtsp-and-multi-client-support.md  04-rtsp-audio-buffer-integration.md  05-rtsp-stack-refactoring.md  trailing-segment-over-processing.md
docs/complete/: 03-websocket-audio-buffer-abstraction-extraction.md
openspec/001-refactor-the-client/: plan.md  spec.md  tasks.md
openspec/changes/expand-high-value-test-coverage/: design.md  proposal.md  tasks.md
openspec/changes/expand-high-value-test-coverage/specs/transcription-test-hardening/: spec.md
openspec/changes/file-sourced-transcriptions/: baseline-engineer-note.md  design.md  proposal.md  tasks.md
openspec/changes/file-sourced-transcriptions/specs/file-sourced-transcription/: spec.md
openspec/changes/rush-with-flush/: design.md  proposal.md  tasks.md
openspec/changes/rush-with-flush/specs/session-flush-command/: spec.md
scripts/: update-langfuse-models
specs/.completed/active-listener-hotkey-dictation/: .qs  proposal.md  tasks.md
specs/.completed/active-listener-litert-rewrite/: .qs  design.md  proposal.md  tasks.md
specs/.completed/active-listener-llm-rewrite/: .qs  proposal.md  tasks.md
specs/.completed/animate-transcription-updates/: .qs  proposal.md
specs/.completed/broadcast-app-state/: .qs  design.md  proposal.md
specs/.completed/gnome-settings-ui/: .qs  design.md  proposal.md  tasks.md
specs/.completed/rush-with-flush/: .qs  tasks.md
specs/.completed/spectrum-over-dbus/: .qs  proposal.md  tasks.md
specs/.completed/state-transition-menu-item/: .qs  design.md
specs/.completed/systemd-eez-nuts/: .qs  proposal.md
specs/001-refactor-the-client/: quickstart.md
specs/active-listener-hotkey-dictation/: .qs  design.md  proposal.md  tasks.md
specs/active-listener-litert-rewrite/: .qs  tasks.md
specs/active-listener-llm-rewrite/: .qs  design.md  tasks.md
specs/animate-transcription-updates/: .qs  design.md  tasks.md
specs/broadcast-app-state/: .qs  tasks.md
specs/command-text-transcriptions/: .qs  design.md  proposal.md  tasks.md
specs/detect-turn-endings/: .qs  design.md  proposal.md  tasks.md
specs/fix-time-once-and-for-all/: .qs  design.md  proposal.md  tasks.md
specs/gnome-settings-ui/: .qs  tasks.md
specs/historical-audio-storage/: .qs  design.md  proposal.md  tasks.md
specs/rush-with-flush/: .qs  design.md  tasks.md
specs/spectrum-over-dbus/: .qs  design.md
specs/state-transition-menu-item/: .qs  proposal.md  tasks.md
specs/systemd-eez-nuts/: .qs  design.md  tasks.md
src/eavesdrop/: __init__.py  __main__.py  backend.py  base.py  config.py  constants.py  gpu.py  logs.py  messages.py  rtsp.py  rtsp_manager.py  rtsp_models.py  server.py  subscriber.py  transcriber.py  vad.py  websocket.py
src/eavesdrop/rtsp/: __init__.py  cache.py  client.py  manager.py  subscriber.py
src/eavesdrop/streaming/: __init__.py  buffer.py  interfaces.py  processor.py  websocket_adapters.py  websocket_client.py
src/eavesdrop/transcription/: __init__.py  batched_pipeline.py  models.py  utils.py  whisper_model.py
tests/: test_basic.py  test_config.py
